--- a/Daily/20200807-TIL.md
+++ b/Daily/20200807-TIL.md
@@ -1,5 +1,6 @@
 # 오늘 한일
 
+- class inheritance TIL 일부 작성
 - Git 강의 듣고 TIL repository 생성 및 기존 java-TIL 폴더 정리
 - Git/Github 첫강의 TIL 정리 [GitFirstClass](https://github.com/FoeverNa/TIL/blob/master/Git/20200807-git-start.md)
 
