--- a/Daily/20200809-TIL.md
+++ b/Daily/20200809-TIL.md
@@ -1,8 +1,17 @@
 # 오늘 할일
 - class inheritance TIL 마저 작성
+- 블로그에 TIL업데이트
 - Hexo 활용 해서 블로그 작성해보기
 - Weekly test #2 준비
 
 # 오늘 한일
+- Java 수업 복습
+  [Inheritance](https://github.com/FoeverNa/TIL/blob/master/Java/3_4_Inheritance.md)
+  [PackagesAndImports](https://github.com/FoeverNa/TIL/blob/master/Java/3_5_Packages%26Imports.md)
+  [Modifier](https://github.com/FoeverNa/TIL/blob/master/Java/3_6_Modifier.md)
 
+- Quiz(#day6) 복습
+
+
+  
 # 내일 할일
