--- a/Daily/20202810-TIL.md
+++ b/Daily/20202810-TIL.md
@@ -8,5 +8,16 @@
 
 # 오늘 한 일
 
+- Weekly Test#2 준비(복습)
+
+- Java 수업 TIL작성 [Polymorphism](https://github.com/FoeverNa/TIL/blob/master/Java/Java_TIL/3_7_Polymorphism.md)
+                   [AbstractClass](https://github.com/ai-creatv/java-jbd1/tree/master/4_OOP_Advanced/4_1_AbstractClass) 
+- 인텔리J 프로젝트와 모듈에 대한 조사?
+
+- Homework #6 복습 [클래스 & 메서드 예제](https://foevna.tistory.com/82)
 
 # 내일 할일
+
+- Weekly Test#2 결과 복습
+
+- Homework #7 복습
