--- a/Daily/20200810-TIL.md
+++ b/Daily/20200810-TIL.md
@@ -10,8 +10,10 @@
 
 - Weekly Test#2 준비(복습)
 
-- Java 수업 TIL작성 [Polymorphism](https://github.com/FoeverNa/TIL/blob/master/Java/Java_TIL/3_7_Polymorphism.md)
-                   [AbstractClass](https://github.com/ai-creatv/java-jbd1/tree/master/4_OOP_Advanced/4_1_AbstractClass) 
+- Java 수업 TIL작성
+    - [Polymorphism](https://github.com/FoeverNa/TIL/blob/master/Java/Java_TIL/3_7_Polymorphism.md)
+    - [AbstractClass](https://github.com/FoeverNa/TIL/blob/master/Java/Java_TIL/4_1_AbstractClass.md) 
+    
 - 인텔리J 프로젝트와 모듈에 대한 조사?
 
 - Homework #6 복습 [클래스 & 메서드 예제](https://foevna.tistory.com/82)
