--- a/Daily/20200830-TIL.md
+++ b/Daily/20200830-TIL.md
@@ -35,10 +35,9 @@
 # 오늘 느낀 것
 
 - 스터디 카페가 닫은 이후로 오늘 처음으로 우리동네와서 동료들과 같이 공부했는데 동료들이 괜히와서 불편하진 않은지 많이 신경이 쓰였다..
-
   - 같이 공부하는게 시너지 나기 위해서 하는거지만 진짜 이 방법이 시너지가 나고 있는지는 체크해봐야 될 것 같다
 
-  
+- 33 구현하면서도 얘기했지만 공부를 조금더 효율적으로 할필요가 느껴진다. 목표들을 잘설정하고 목표달성위해 사용할 수 있는 시간분배도 잘해놔야 성장 할 수 있지 생각 안난다고 주구장창 잡고만 있으면 시간이 훅간다.. 나한테 제일 중요한 자원은 시간임을 잊지말자
 
 # 내일 할일
 
