--- a/Daily/20200901-TIL.md
+++ b/Daily/20200901-TIL.md
@@ -35,6 +35,7 @@
       - 반복문 중첩하고 그안에서 조건문사용하는게 어려웠는데 좋은연습된것 같ㄷ아
   
   - 알고리즘 중금 문제 풀이
+    
     - 아직 문제풀이 방식조차 발견하지 못해서 1도구현을 못했다..
 
 # 오늘 느낀 것
@@ -59,7 +60,7 @@
 
 - 원격수업 듣고 복습 및 과제
 
-- 알고리즘 풀
+- 알고리즘 풀이
 
   
 
