--- a/Daily/20200910-TIL.md
+++ b/Daily/20200910-TIL.md
@@ -30,16 +30,25 @@
   - 강사님이 써놓은신 코드를 보면 코드자체는 내가 사용하지 못할게 없는데 중요한건 알고리즘을 이해하지 못한다는 것이었다.어느 정도 언어에 익숙해지면 나중은 이언어를 어떻게 활용하는가의 따라 달라지게 되는가부다
 
 - 알고리즘 연습문제 다시풀기
-  - 정리 마친 연습문제를 다시한번 풀어보았다
+  - 위장
+    - 강사님이 hashtable을 쓰셔서 hashmap과 차이점을 찾아봤더니 hashtable은 동기화가 가능하고 null값을 넣을수 없지만 hashmap은 동기화가 불가능하고 하나의 null key와 여러개의 null value를 지원한다고 한다
+      - 일반적으로는 동기화가 필요하지 않은 상황에서는 hashmap을 많이 사용한다는데 나는 아직 동기화가 뭔지 모르니 hashmap을 쓰는것도 좋을것같다
+    - hashmap.put으로 key값에 있는 value를 덮어쓸수 있어서 편리했다. 나는 왜 valu가 무시될것이라고 생각했지? 그건 set의경우인가? 더찾아보기로
+  - 나머지는 내일 마저 풀어봐야 될 것 같다
 
 # 오늘 느낀 것
 
 -   어제 저녁에 자려고 누워서 오늘 뭐했지 하고 돌아봤는데 소름 끼치게 그 전날이랑 똑같아서 갑자기 마음이 옥죄어오는 기분이 들었다. 그리고 아침에 일어나서 공부하러 오는길에 어제랑 똑같은 길로 오는데 또 비슷한 기분이 들어서 괴로웠다. 잘은 모르지만 이런게 공황 장애로 이어지는게 아닌가 싶을 정도에 기분이었다.요즘 출퇴근시간이 짧아져서 학원 다닐 때보다 훨씬 여유롭게 보내고 있었고 스스로도 공부에 여유가 있다고 느끼고 있었는데 왜이런 마음이 들었는지는 모르겠지만 지금 목표하고 있는 취업, 그리고 그후에 삶을 생각하며 길게보면서 마음을 잘 다독이면서 가야겠다고 생각하게된 사건이다
-   
 
-- 
+
 
 
 
 # 내일 할일
+
+- 알고리즘 풀이 복습
+- 휴강기간중 공부한것들 돌아보기
+- TIl작성 & 블로그 업데이트
+
+
 
