--- a/Daily/20200914-TIL.md
+++ b/Daily/20200914-TIL.md
@@ -37,7 +37,11 @@
 
 # 오늘 느낀 것
 
--   
+-   오늘도 집중력이 많이 떨어졌다. 어떻게하면 집중력 더 높일가 생각하면 매일매일 하는 데일리 목표에 조금더 신경을 써야할 것이고 그러기 위해선.. 주간 목표 월간 목표가 필요한것 같다. 현재 학원이 자꾸 밀리는 상황에서 이런 목표잡기가 어렵지만 어떻게든 방법찾아서 해내야된다. 
+
+    -   알고리즘 문제를 풀었는데 어차피 준비해야되는 것이기 때문에 이렇게 시간있을때마다 문제를 푸는건 좋은 방향인것 같다. 그래도 더 집중력 필요하니 몇문제 정도 풀지 아니면 조금더 난이도를 올릴지 잘판단하면서 해야될 것같다
+
+    
 
 # 내일 할일
 
