--- a/Daily/20200916-TIL.md
+++ b/Daily/20200916-TIL.md
@@ -36,13 +36,13 @@
       - Initializer를 만들어 생성시점을 알아보려고 하니 변수에 하기전 Initilizer가 열거형변수만큼 실행이 되었다
       - 열거형 변수가 static이기때문에 클래스 접근시 모두 사용가능한 상태여야 되기때문에 한번에 객체가 생성되는것같다
 - 다형성에서 자녀객채로 부모객체의 변수를 자녀객체로 캐스팅해서 넣는게 문법적으로 문제가 없는건 부모 타입으로 생성된 자녀객체를 다시 자녀객체로 다운캐스팅할때 쓰는 문법가 동일하기 때문에 문법적으로 문제가 없었던 것이었다
-    
+  
   - 이런 문제를 방지하기 위해 instanceof 메서드를 사용한다 .
-    - arrayList에서 두개의 다른 add메서드가 이게 oveeride된게 맞나 궁금증이 생겼는데 오늘수업에서 오버라이딩은 입력파라미터와와 출력타입이 같아야 한대서 더알아보기 위해 실습함
+    - arrayList에서 두개의 다른 add메서드가 이게 override된게 맞나 궁금증이 생겼는데 오늘수업에서 오버라이딩은 입력파라미터와와 출력타입이 같아야 한대서 더알아보기 위해 실습함
 - 인터페이스 bar 에서 add 추상메서드륾 만들고 ba2에서 bar를 상속하고 다른 add메서드를 추가했더니 추가되서  bar2를 구현하는 foo를 만들었더니 같은이름의 다른 add메서드 두개를 모드 오버라이딩해서야됫음 => 결국 두개의 다른 인터페이스의 add를 받아서 오버라이딩한게맞앗음
-        - 궁금한걸 스스로 알아낸거같아서 뿌듯했다
+        -  궁금한걸 스스로 알아낸거같아서 뿌듯했다
 
-# 오늘 느낀 것
+#  오늘 느낀 것
 
 -   오늘 아침 출석시간에 강사님이 개발자는 기술이 빠르게 발전하는 환경에 적응하기 위해 끊임없이 공부해야 하는 직업이라는데 나는 이렇게 끊임없이 공부하는 직업에 잘 맞는 사람일까 고민하게 된다
     -   또 더닝크루거 효과에 대해 얘기해주셨는데 어떤 분야에 대해 잘모를땐 자신감이 있지만 점점 알아 갈수록 내가 모른다는 사실을 알기 때문에 점점 자신감이 줄어든드는 그래프였다
