--- a/Daily/20200917-TIL.md
+++ b/Daily/20200917-TIL.md
@@ -31,24 +31,24 @@
       
     
   - 오후수업
-      
+    
       - 오후수업 듣는데 가장 큰 적은 졸음이다.. 이문제를 어떻게든 극복해야지 온라인 수업이 도움이 될 것 같다
         - 쉬는시간에 5분이라도 누워서 잤더니 조금 개운해진 느낌이다
-          - 그 이후 안조는 걸보니 확실히 효과가 있는 것같다 앞으로도 이렇게 해야될 것같다
+          - 그 이후 안조는 걸보니 확실히 효과가 있는 것 같다 앞으로도 이렇게 해야될 것같다
       - 에외처리
-        - 복습부분은 자세해주시다가 thorw부분을 너무 간략하게 하고 넘어가서 당황했다.. 아직 어떻게 쓰는지 잘모르겠다
+        - 복습부분은 자세히 설명 해주시다가 thorw부분을 너무 간략하게 하고 넘어가서 당황했다.. 아직 어떻게 쓰는지 잘모르겠다
           - Custom Exception과 연계되는 부분같은데 precourse내용을 보충하던지 해야겠다
       -  강의 들으면서 중간중간 쉬는시간에 책을 읽거나 뉴스를 읽는등 새로운 컨텐츠를 넣지 않고 비워놓으려고 노력하는데 도움이 되는 것 같다.. 뇌가 과부화되버린다
       - 오후 수업에 생각보다 본수업이 되니까 질문하는 사람도 많고 열심히 참여하는게 나쁘진 않은 분위기여서 질문도 어려움없이 할수있었다. 그래도 상황이된다면 강사님께 질문 기회를 얻어서 좋긴한 것 같다
         - 그래도 오프라인때보다는 질문하기가 좀 어려운 분위기였는데 이건 수업 후에 좀 따로 정리해서 질문을 하는 방식으로 돌파해야될 것같다
-      - 생각보다 온라인 수업은 나쁘지 않았다. 보강때 수업을 들으며 어느정도 환경에 적응한게 도움이 많이 되는 것같아서 다행이다. 수업을 녹화해서 제공해주는것도 큰 도움이 되는 것 같다
+      - 생각보다 온라인 수업은 나쁘지 않았다. 보강 때 수업을 들으며 어느정도 환경에 적응한게 도움이 많이 되는 것같아서 다행이다. 수업을 녹화해서 제공해주는것도 큰 도움이 되는 것 같다
       
   - 오후 수업복습
   
       - 예외처리
           - getCause()메서드는 설명을 짧게해주셔서 나도 간단히 찾아봤는데 원인이 되는 객체를 반환하던지 못찾으면 null을 반환하는 메서드인 것 같다
               - 구체적으로 어떻게 사용하는지는 찾지 못했다
-          - 확실히 동영상 자료가 있으니까복습하는데 굉장히 도움이된다.. 오프라인 수업때도 녹음을 해서 음성이라도 남겨놓는방안을 고민해봐야될 것 같다
+          - 확실히 동영상 자료가 있으니까복습하는데 굉장히 도움이된다.. 오프라인 수업때도 녹음을 해서 음성이라도 남겨놓는 방안을 고민해봐야될 것 같다
       - 내부클래스
           - 내부클래스의 예인 Map.Entry에 대해서 조금더 알아보고 싶어서 검색하다가 시간되서 마무리함
 
