--- a/Daily/20200928-TIL.md
+++ b/Daily/20200928-TIL.md
@@ -1,72 +1,100 @@
 # 오늘 공부할 내용
 
-- 람다식 정리(퀴즈, 예제실습)
+- 오전 러버덕 , 주제 : Stream API 활용
 
-- 람다식 과제 다시풀기(시간 정해놓고하기)
-
-- 스트림 정리
-
-- TiL 정리 및 블로그 업데이트
-
-  
-
-
-
-# 오늘 배운 내용
-
-- 람다식 정리
-
-  - 어제 계획한대로 코드 하나하나 실습해보며 복습해보기로 했다
-    - 확실히 실습해보면서 하니까 내가 어떤걸 알고 있고 모르고 있는지 알게 되는 것 같다
-  - 내용정리하고 코드를 하나하나 다시 처보는게 유용하게도 느껴지지만 꽤나 지루하게 느껴져서 집중하기가 어려웠다
-    - 언능 정리하고 과제풀고 싶은데 생각보다 속도가 나지않는다... 하지만 확실히 익숙해지고 있으니 인내심이 필요한 구간 같다..
-  - 메서드의 구현방식보다는 어떻게 사용하는지에 집중해서 살펴보려고 노력하고 있다..
-    - 중간중간 궁금한것들도 있었지만 간단히 찾아보고 어떻게 사용할지에 집중하려고 노력했다
-  - 람다식은 익명의 클래스와 비슷하게 이해하면 조금더 이해하기가 편하긴하다.. 객체인데 하나의 메서드를 가지고 있기 때문에 그메서드만 구현하면 메서드를 사용할 수 있다고.
-    - 그리고 그 객체를 변수에 담아 여기에 넣고 저기에 넣고 할 수 있다고 모듈처럼.. 사실 아직 모듈처럼 이리저리 넣고 쓴느법은 잘모르겠다
-      - 이부분이 핵심이라고 하셨는데 andThan과 Compose만으로 무얼할수있는지 아직은 잘 모르겠다..
-
-- 스트림정리
-
-  - 람다식을 정리하고 다시 보니 이해하기가 편했다
-
-  - Map을 어떻게 Stream에 넣는지 궁금해서 실습해보니 keySet과 valueSet을 따로 Stream화 하는것을 확인했다
-
-  - Stream은 Colletion을 정리한 일회용 배열같다는 생각이 들었다
-
-    - 그리고 그 일회용 배열을 이러저리 요리할 수 있는 여러가지 메서드들이 존재하고
-
-  - 마지막 Colllet 까지 보다가 끝났따
-
-    
-
-  
-
-- 그 외 질문 사항 정리
-
-  - System.out.println에 정체
-
-    - System은 클래스, out은 System의 스테틱 변수 type은 PrintStream, println은 PrintStream에 메서드
-      - 즉 System클래스의 정적변수를 통해 PrintStream에 객체의 println 메서드를 호출하는 것! 
-      - System이 java.lang 에 속하기 때문에 임포트 없이 접근가능하다
-
-    
-
-
-
-# 내일 공부할 내용
-
-- 스트림 정리 마무리(못본 부분, 퀴즈)
+- Stream 복습 마무리
 
 - 퀴즈 준비
 
-- 오후 수업 복습 및 과제
+- 오후 수업 & 복습
 
 - 질문사항 조사 및 정리
 
 - TiL 정리 및 블로그 업데이트
 
   
+
+
+
+# 오늘 공부한 것 & 배운 내용
+
+- 오전 러버덕
+- 내용정리		
+
+> 스트림이란
+>
+>
+> 자바8부터 추가된 컬렉션의 저장 요소를 하나씩 참조해서 람다식으로 처리할 수 있도록 해주는 프로그래밍 도구입니다.
+>
+>
+> 스트림 특징
+>
+> 1. 선언형으로 코드를 구현할 수 있습니다.
+>  람다 표현식을 이용하여 특정 조건의 데이터를 필터링하는 코드도 쉽게 구현할 수 있다.
+>
+> 
+>
+> 2. 데이터 소스에 대한 공통의 접근 방식을 제공합니다
+>
+> List, Set Array 등 다양한 경우에 대해 표준화된 방식으로 데이터 접근 가능 특히 Stream::sorted() 메소드를 통해 공통된 정렬 방식을 제공
+>
+>
+> 3. 병렬화를 통해 빠르게 처리가 좋아집니다
+>
+> 스트림은 병렬 처리를 위한 처리 방식을 쉽게 지원해주기 때문에 서
+>
+> 병렬화는 우리가  아직 배우지 않았지만 연산을 해주는일꾼 같은 스레드를 여러개 두어서 동시에 연산을 하도록해서 처리 속도를 빠르게하는것을
+> 뜻하는데요
+> 예를들어서 콜렉션에 담긴 요소를 세면데에 담겨진 물이라고 생각할때
+> 하나의 파이프라인으로 물을 흘려보내주는 것보다 여러개의 파이프라인에 동시에 물을 흘려보내주면
+> 훨씬더 물이 빠르게 빠져나가는 것처럼 
+>
+> 동시에 요소들을 처리하도록 하는게 쉽게 구현가능해서 프로그램의 성능이 더 좋아질 수있다는 특징있습니다
+>
+> 
+>
+>
+> 활용
+>
+> 콜렉션의 요소들을 값을 처리할 때 람다식을 활용하여 더 간견하고 가독성이 좋게 처리할 때 활용할 수 있으며 
+>
+> 다양한 종류의 콜렉션들을 표준화된 방식으로 처리할때 활용 될 수 있으며
+>
+> 콜렉션을 처리할 때 더 성능이 좋게 처리할때 활용될 수 있습니다.
+>
+>
+> 강사님정리
+>
+> Terminal operation 최죵연산 메서드)가 입력됬을때만 연산을 한다는점
+>
+> APi이기때문에 제공하는 연산하는 도구들이 제공되다는점
+>
+> 병렬 처리를 통해 빠르게 처리할수잇다는점이 실제활용될때 중요한 내용들이라고 정리해주심
+
+- 퀴즈준비
+  - 람다식
+    - Consumer - accpet, Supplier - get, getas  , Function,Operator - apply, applyAs, Predicate - test
+  - 람다식, 스트림 모두 강사님 강의자료만이라도 훑어보았따
+- 오후수업
+  - 오브젝트 클래스는 다른 곳에서 사용한게 이미 많아서 이해가 어렵진 않았지만 조금 일직 배웠으면 다른 주제들을 이해하는데 조금더 도움이 됬겠다는 생각을 했다
+  - 요즘 수업을 하면서 강사님께서 설명안해주신 부분은 질문을 하지만 설명해주신 부분에 대해선 질문하기보다는 적어놨다가 스스로 찾아보는식으로 접근을 많이 한다. 
+    - 그냥 질문하는 것보다는 조금이라도 더 알아본뒤에 질문을 하는게 서로에게 더 도움이 된다는걸 배워가는 것 같다
+- 오후수업복습
+  - 내용 정리 및 강의자료 보충
+    - 수업 초반부는 생각보다 집중을 못했는지.. 강의내용 정리가 잘안되서 다시 강의를 듣고 복습을 해야될 것같다
+      - 강의를 다시들을 수 있다는 점이 혹시 집중력을 떨어뜨리고 있지는 않는지 생각해볼 부분인 것 같다
+    - 복습을 할때 수업내용도 복습을 하지만 잘이해가 안가는 건 검색해서 찾아보고 예제를 따라써보는것도 좋은 방법이 될것같다
+      - 좋은 코드를 많이보고 이해하면서 많이 따라 쳐보는게 최고의 공부 방법이 아닐까 싶다
+    - 생각보다 실습하다 막혀서 설명을 잘듣지 못한 부분들이 많다.. 환경걔선은 했지만 아쉬운 부분들이 있다. 
+      - 구현보다는 설명에 집중해야 될 수 도 있을것 같다
+    - System 정리하다가 시간 종료됨
+
+# 내일 공부할 내용
+
+- 어제 수업한내용 보충 및 예제 실습해보기
+- 지난 과제 다시해보기
+- 질문사항 조사 및 정리
+- TiL 정리 및 블로그 업데이트
 
 
 
