--- a/Java/Java_TIL/5_11_I-O.md
+++ b/Java/Java_TIL/5_11_I-O.md
@@ -9,6 +9,7 @@
   - Stream : 노드로부터 데이터를 주고 받는 통로 (StreamAPI와는 연관이 없다)
 
     - 입력으로 사용되는 스트림과 출력으로 사용되는 스트림은 별개
+    - 단방향 통신이기 때문에 입력과 출력을 동시에 하기 위해서는 2개의 스트림이 필요
   - 입출력을 함께 하는 것은 채널(Channel) - NIO (New Input/Output를 발전시킨 형태)
 
   - 데이터의 소스와 목적지를 노드(node)라 부름
@@ -47,7 +48,10 @@
   | `boolean markSupported()`                 | mark, reset 메소드의 지원 여부를 반환                        |
 
   ```java
-   try (InputStream input = System.in;){ // close를 자동으로 해주는 방식
+  //System.in 을 통한 표준 입력(키보드 입력) 
+  //System.out 을 통한 표준 출력(모니터 출력)
+  
+  try (InputStream input = System.in;){ // close를 자동으로 해주는 방식
               int read = -1;
               while((read = input.read()) != -1 ){
                   System.out.printf("Int: %d Char: %c\n", read, read);
@@ -70,7 +74,7 @@
   	  try (InputStream input = System.in;){ 
               int read = 0;
               byte[] bytes = new byte[512]; 
-              while((read = input.read(bytes)) != 0) { // => 왜 1이면 구동이 끝날까?
+              while((read = input.read(bytes)) != 0) { 
                   System.out.println(Arrays.toString(bytes)); // [97, 98, 99, 100, 10, 0, 0, 0, 0, 0, 0, 0....
                   System.out.println(read); // 5 // 5개를 읽었다는 뜻 // 버퍼에 크기에 따라 달라지 질수 있다
                   					    // 버퍼크기가 3이라면 3개씩 밖에 못읽어서 3개가 출력된다
@@ -80,14 +84,16 @@
               e.printStackTrace();
           }
   
-     // 입력값을 여러개 받을 수 있는 방식
-     // 
+     //입력을 그만 받고 빠져나올 수 있게 하는 방법    
           try (InputStream input = System.in;){
               int read = 0;
               byte[] bytes = new byte[512]; 
               while((read = input.read(bytes)) != 1 ){ // 입력값 + 엔터로 입력을 받는데 엔터까지도 입력을 인식하기 때문에 입력값이 있는 경우는 무조건 1을 초과하게 되서 다시한번 whil문이 돌아가게 된다
                                                       // 그래서 엔터를 입력하면 입력값이 1이되서 구동이 끝나게 된다
                                                       // 포인트는 입력값의 갯수를 설정해 입력값을 반복해서 받을 수 있다는 것
+                     if((char)bytes[0] =='q'){  //이런식으로 빠져나올 수 있는 문자를 설정하는게 일반적이다
+                      break;
+                  }
                   System.out.println(Arrays.toString(bytes));
                   System.out.println(read);
               }
@@ -103,8 +109,10 @@
 - Reader의 주요 메소드 (char 단위)
 
   - Stream과 유사하나, Reader는 char 단위로 읽어서 int로 반환한다
-    - Stream을 이용해서 Reader를 초기화 할 수 있다
-    - 보충해야된다 => 한글도 입력할 수 있다는 점이 좋은방식
+    - Stream을 이용해서 Reader를 초기화 할 수 있다 
+  
+  - 오직 문자를 입력받기 위한 스트림 
+    - 컴퓨터 기본 통신 단위가 byte이기 때문에 char단위로는 문자외에는 통신이 불가능하다
   
   
   
@@ -118,9 +126,9 @@
   | `int available()`                         | 읽을 수 있는 데이터의 크기를 반납                            |
   | `long skip(long n)`                       | 스트림에서 n만큼 건너 뛴다.                                  |
   | `void mark(int readAheadLimit)`           | reset()으로 돌아갈 위치를 표시한다. readLimit은 돌릴 수 있는 최대 바이트 수 |
-  | `void reset()`                            | mark()가 호출된 지점으로 돌아간다.                           |
+| `void reset()`                            | mark()가 호출된 지점으로 돌아간다.                           |
   | `boolean markSupported()`                 | mark, reset 메소드의 지원 여부를 반환                        |
-
+  
   
 
 ```java
@@ -214,14 +222,16 @@
           try (CharArrayReader reader = new CharArrayReader(memory); // 안에 ;을 사용하면 resoruce 를 2개 사용할 수 있다
                CharArrayWriter writer = new CharArrayWriter();) { // 두번째 것도 ;을 붙여줘어야 하네
               while ((read = reader.read(cbuf)) > 0 ){
-                  writer.write(cbuf, 0, read); // 0은 offset 을 0으로 해서 skip 없이 간다는 것 => 이걸 왜 하는 지 알기
-                                      // 안쓰면 버퍼에 이전 값이 남아 있을 수 있다. // 마지막 출력이 입력이 아니고 입력트가 된다
-                                      // char[]이 아닌 String으로 하면 적절하지 않다고 설명하셨는데 다시 이해해보기
-              }
-              System.out.println(Arrays.toString(writer.toCharArray())); // 왜 charArray로 바꾸는지 이해하기
+                  writer.write(cbuf, 0, read); // 입력파라미터 (char[], offset, len) 
+                  	                         // 버퍼, 복사를시작할위치, 복사할 길이
+                                                // 복사할 길이를 지정해주기 대문에 남아있는 버퍼에 값에 영향을 받지 않는다
+                  	                          // 길이 지정안할시 찌꺼기 값이 남아 있을 수 있다
+                                            // char[]이 아닌 string을 입력할 수 있지만 별로 의미가 없다고 설명해주심
+                   }
+              System.out.println(Arrays.toString(writer.toCharArray())); // wirter에 String 값으로 입력된 값을 charArray로 바꾸어서 출력
           } catch (IOException e){
               e.printStackTrace();
-          } // 전체 과정 이해하기 버퍼를 타고가서 charArray에 들어간다는데
+          } 
   
   ```
 
@@ -261,16 +271,16 @@
             File fileTwo = new File(filePath, "file2.txt");
             fileTwo.createNewFile(); // 해당 폴더에 파일이 생성됨 // 파일 생성 방법 1
                                    // IOexception을 main()메소드에서 throw함
-                                     // 
+                                     
   
             File fileThree = new File(fileOne, "file3.txt");
-            fileThree.createNewFile(); // 위랑 무슨차이지? => 보충해야함
+            fileThree.createNewFile(); // 위에는 filePath에서 받았고 아래는 fileOne객체를 넣었구나
     
             File fileFour = new File(new URI("file:///c:/Temp/MyTemp/file4.txt")); // 예도 예외처리해줘야함
             fileFour.createNewFile();
-          fileFour.deleteOnExit(); // 그냥 delete도 가능하다 // 프로그램이 종료되면 파일이 삭제 된다 -> 정말 Temp 파일에 사용하면 유용하겠다
+          fileFour.deleteOnExit(); // 콘솔 프로그램이 종료되면 파일이 삭제 된다 -> 정말 Temp 파일에 사용하면 유용하겠다
     
-          //path 가 file 객체로 되어있다는 것이 구분을 어렵게하는 단점이 있다는 것 이해해보자
+          //file이 자체 파일이 아니라 path로도 사용이 가능하기 때문에 헷갈릴 수 있다는점 생각해두자
     
     ```
 
@@ -297,8 +307,7 @@
           System.out.println(fileTwo.getParent()); // C:\Temp\MyTemp
   
           System.out.println(fileTwo.isAbsolute()); // 절대 경로를 사용하는 가? // 상대 경로도 존재하다는거지, 찾아
-                                                  // 상대경로를 하면 실행한 위치에 만든다던지하는 장점이있고
-                                                  // 절대겨올를 사용하면 어디에서 실행하면 같은 곳에 만들어진다는 장점이 있다
+                                                  // 절대 경로 상대경로는 아래에 정리해두었다
           System.out.println(fileTwo.getCanonicalPath()); // .. 등을 모두 배제한 표준 표현법 사용 
                                                           // 절대 경로라고 해도 깔끔한 경로는 아니기 때문에 정리가 필요할때 사용한다
   
@@ -308,7 +317,7 @@
           System.out.println(Arrays.toString(fileOne.list())); // [file2.txt, file3.txt] // String Array으로 출력된다
   											             // list를 이용해 directory안에 file들을 다 출력해 볼 수 잇따
           System.out.println(Arrays.toString(fileOne.listFiles())); // [C:\Temp\MyTemp\file2.txt, C:\Temp\MyTemp\file3.txt]
-                                                                    // File객체 Array로 출력이 된다
+                                                                    // File객체가 Array로 출력이 된다
           // 용도에 따라 사용하면 될 것이다
   
   
@@ -328,6 +337,7 @@
           } catch (IOException e) {
               e.printStackTrace();
           } // 실행결과 src 파일의 내용이 dst 파일로 복사가 되었다
+             // 왜 바이트 단위로 읽어서 출력했는데 한글이 안깨진걸까?
   
   
           // 이것도 가능하다, 폴리몰피즘에 의해
@@ -343,7 +353,7 @@
               e.printStackTrace();
           }
   
-        // Reader를 이용한 파일의 복사 ( byte단위) // 체크
+        // Reader를 이용한 파일의 복사 ( char단위) // 체크
           try(FileReader src = new FileReader(srcFile);
               FileWriter dst = new FileWriter(dstFile);) {
               int read = -1; // 더 읽을게 없으면 -1을 출력한다
@@ -353,7 +363,7 @@
   
           } catch (IOException e) {
               e.printStackTrace();
-          } // 실행결과 src 파일의 내용이 dst 파일로 복사가 되었다
+          }
   
   
           try(InputStream src = new FileInputStream(srcFile);
@@ -385,7 +395,15 @@
           } // 버퍼를 이용해서 파일을 복사하는것
   ```
 
+#### 참고: 절대경로, 상대경로
 
+- 절대경로 
+  - 어떠한 웹피이지나 파일이 가지고 있는 고유한 경로를 말한다
+  - 쉽게말해서 파일의 절대적인 주소를 뜻한다 ex)  http://www.google.com, C:\users\document\untitled.jpg
+- 상대경로
+  - 현지 위치한곳을 기준으로한 다른곳의 주소를 뜻한다
+  - 예를 들면 Temp폴더 하위에 A, B 폴더가 있고 B폴더에 fileOne.txt파일이 있을 경우 폴더에서의 fileOne.txt의 상대경로는 ../A/fileOne.txt가 된다
+    - ''/'': 가장 최상위 디렉토리로 이동, ''./': 현재 디렉토리, "../": 상위 디렉토리로 이동
 
 
 
@@ -418,49 +436,23 @@
 // InputStreamReader ┬  byte 스트림 -> char 스트림으로 변환하는 보조 스트림 // 위에 InputStream 사용한 예 있다
 // OutputStreamWriter┘
 
-// 반응성이 중요하지 않은 경우에 사용 한다 (파일입출력, 네트워크 일부 경우(다운로드, 업로드...)
+// 전송속도가 빠르기 때문에 반응성이 중요하지 않은 경우에 사용 한다 (파일입출력, 네트워크 일부 경우(다운로드, 업로드...)
 // BufferedReader       ┬ 스트림에 버퍼링 적용하여 스트림 throughput 향상
 // BufferedWriter       ┤ throughput: 평균 전송 속도(로 이해하면 될 것 같다)
 // BufferedInputStream  ┤ delay: 버퍼링을 쓸 경우 오히려 안좋아짐 -> delay 시간 길어짐(네트워크에서 ping으로 생각하는 것)
 // BufferedOutputStream ┘ 위 두 속성은 서로 trade-off 관계 // 평균 전송 속도 높이는게 이득인 상황이 생긴다 -> 그대 Buffer를 사용한다
 
-        File src = new File("C:/Windows/explorer.exe"); // Windows 에 가장 큰 파일
-        File dst = new File("C:/Temp/MyTemp/explorer.exe"); // 복사할 위치
-
-        try(FileInputStream in = new FileInputStream(src);
-            FileOutputStream out = new FileOutputStream(dst);
-            BufferedInputStream buffIn = new BufferedInputStream(in);
-            BufferedOutputStream buffOut = new BufferedOutputStream(out);) {
-            long start = System.nanoTime();
-            copyStream(in, out);
-            System.out.println(System.nanoTime() - start); // 79874600
-
-            start = System.nanoTime();
-            copyStream(buffIn, buffOut);
-            System.out.println(System.nanoTime() - start); // 18100 // 10000배 이상 차이가 난다 -> 반드시 사용해야하는 정도의 차이
-
-        } catch (IOException e) {
-            e.printStackTrace();
+public class Main {
+    // 버퍼 사용할때 필요한 메서드
+    static void copyStream(InputStream input, OutputStream output) throws IOException {
+        byte[] buff = new byte[1024];
+        int read = 0;
+        while ((read = input.read(buff))>0) {
+            output.write(buff, 0, read);
         }
-         // 반응성이 중요한 경우에만 Buffer 사용하고 그외에는 그냥 사용하는게 좋을 정도로 큰 차이라고 이해하면 좋겠다
+    }
+  
 
- // DataInputStream  ┬  기본형 데이터 (Primitive Type)을 전송하기 위한 스트림
- // DataOutputStream ┘  Stream, Read(Writer)는 byte/ char 단위로 전송한다
-                       // readBoolean, readByte, readShort ... readUTF (String type)
-                       // writeBoolean, writeByte, writeShort ...readUTF (String type)
-
-        File src = new File("C:/Temp/MyTemp/data.dat"); // 윈도우는 \가 맞지만 /을 사용해도 괜찮다
-        DataOutputStream out = new DataOutputStream(new FileOutputStream(src)); // 보조 스트림이기때문에 메인 스트림을 생성해서 입력할 필요하다
-        out.writeUTF("자바왕");
-        out.writeInt(128);
-        out.writeFloat(523.411f);
-
-        DataInputStream in = new DataInputStream(new FileInputStream(src));
-        String str = in.readUTF();
-        int integer = in.readInt();
-        float floatVal = in.readFloat();
-
-        System.out.println(str + " " + integer + " " + floatVal); 
 ```
 
 
@@ -481,39 +473,44 @@
 
 - 기본 버퍼 크기: 8192 bytes
 
-  ```
-  static void copyStream(InputStream input, OutputStream output) throws IOException {
-    byte [] buff = new byte[1024];
-    int read = -1;
-    while ((read = input.read(buff) > 0)) {
-      output.write(buff, 0, read);
-    }
-  }
+  ```java
+  public class Main {
+      // 버퍼 사용할때 필요한 메서드
+      static void copyStream(InputStream input, OutputStream output) throws IOException {
+          byte[] buff = new byte[1024];
+          int read = 0;
+          while ((read = input.read(buff))>0) {
+              output.write(buff, 0, read);
+          }
+      }
+    
+      public static void main(String[] args)  {
+          
+          File src = new File("C:/Windows/explorer.exe"); // Windows 에 가장 큰 파일
+          File dst = new File("C:/Temp/MyTemp/explorer.exe"); // 복사할 위치
   
-  public static void main(String[] args) {
-    File src = new File("C:/Windows/explorer.exe");
-    File dst = new File("C:/temp/explorer.exe");
-    try (FileInputStream in = new FileInputStream(src);
-         FileOutputStream out = new FileOutputStream(target);
-         BufferedInputStream buffIn = new BufferedInputStream(in);
-         BufferedOutputStream buffOut = new BufferedOutputStream(out);) {
-      long start = System.nanoTime();
-      copyStream(in, out);
-      System.out.println(System.nanoTime() - start);
+          try(FileInputStream in = new FileInputStream(src);
+              FileOutputStream out = new FileOutputStream(dst);
+              BufferedInputStream buffIn = new BufferedInputStream(in); // InputStream을 생성해서 입력해야 한다
+              BufferedOutputStream buffOut = new BufferedOutputStream(out);) {
+              //일반 Stream 전송속도
+              long start = System.nanoTime();
+              copyStream(in, out);
+              System.out.println(System.nanoTime() - start); // 79874600
+  		   //버퍼 Stream 전송속도            
+              start = System.nanoTime();
+              copyStream(buffIn, buffOut);
+              System.out.println(System.nanoTime() - start); // 18100 // 10000배 이상 차이가 난다 -> 반드시 사용해야하는 정도의 차이
   
-      long start = System.nanoTime();
-      copyStream(bin, bout);
-      System.out.println(System.nanoTime() - start);
-    } catch (IOException e) {
-      e.printStackTrace();
-    }
-  
-  }
+          } catch (IOException e) {
+              e.printStackTrace();
+          }
+           // 반응성이 중요한 경우에만 Buffer 사용하고 그외에는 그냥 사용하는게 좋을 정도로 큰 차이라고 이해하면 좋겠다
   ```
 
 - `BufferedReader는` `readLine()` 메소드를 사용할 수 있다.
 
-  ```
+  ```java
   File src = new File("./src.txt");
   try (BufferedReader buffReader = new BufferedReader(new FileReader(src));) {
     String line = null;
@@ -523,6 +520,19 @@
   } catch (IOException e) {
     e.printStackTrace();
   }
+  
+  //개인 실습
+        System.out.println("데이터를 입력하세요");
+          try(InputStream is = System.in;
+              InputStreamReader reader = new InputStreamReader(is);
+              BufferedReader buffer = new BufferedReader(reader);) {
+              String str = buffer.readLine();
+              System.out.println("입력값: " + str);
+  
+          } catch (IOException e) {
+              System.out.println(e);
+          }
+  
   ```
 
 ### 기본 데이터형 전송 스트림
@@ -552,19 +562,22 @@
   |                    | `void writeChar(char v)`     |
   |                    | `void writeUTF(String v)`    |
 
-  ```
-  File src = new File("c:/Temp/data.dat");
-  try (DataOutputStream out = new DataOutputStream(new FileOutputStream(src))) {
-    out.writeUTF("김패캠");
-    out.writeInt(15);
-    out.writeFloat(14.23);
-  }
+  ```java
   
-  try (DataInputStream in = new DataInputStream(new FileInputStream(src))) {
-    String string = in.readUTF();
-    int integer = in.readInt();
-    float floatNum = in.readFloat();
-    System.out.println(string + " " + integer + " " + floatNum);
+  	File src = new File("C:/Temp/MyTemp/data.dat"); // 윈도우는 \가 맞지만 /을 사용해도 괜찮다
+  	DataOutputStream out = new DataOutputStream(new FileOutputStream(src)); // 보조 스트림이기때문에 메인 스트림을 생성해서 입력할 필요하다
+  	out.writeUTF("자바왕");
+  	out.writeInt(128);
+  	out.writeFloat(523.411f);
+  
+  	DataInputStream in = new DataInputStream(new FileInputStream(src));
+  	String str = in.readUTF();
+  	int integer = in.readInt();
+  	float floatVal = in.readFloat();//출력한 순서대로 입력을 해야한다 
+                                          //이 순서 안지키면 에러가 발생한다
+  
+  	System.out.println(str + " " + integer + " " + floatVal); 
+      }
   }
   ```
 
