--- a/Java/Java_TIL/5_11_I-O.md
+++ b/Java/Java_TIL/5_11_I-O.md
@@ -353,7 +353,7 @@
               e.printStackTrace();
           }
   
-        // Reader를 이용한 파일의 복사 ( char단위) // 체크
+        // Reader를 이용한 파일의 복사 ( char단위) 
           try(FileReader src = new FileReader(srcFile);
               FileWriter dst = new FileWriter(dstFile);) {
               int read = -1; // 더 읽을게 없으면 -1을 출력한다
@@ -587,66 +587,94 @@ public class Main {
 
 - 직렬화(Serialization)와 역직렬화(Deserialization) 사용
 
-  ```
-  class Foo implements Serializable { // has-a 관계의 모든 클래스가 Serializable이어야 함
-    static final long serialVersionUID = 1L; // 객체의 버전 관리
+  - 직렬화(Serialization): 힙영역의 객체의 내용 중 필요한 것들을 간추려서 일자로 펴주어 입출력가능한 형태로 만드는 것
+  - 역직렬화(Deserialization): 직렬화 된 객체를 다시 힙영역에 기록할 수 있도록 만드는 것
+
+- Serializable 인터페이스를 구현하여 
+
+  ```java
+      class Foo implements Serializable {// Serialize를 할 수 있는 객체를 만드는 클래스이다.
+                                         // has-a관계에 있는 클래스들 모두 Serialzable해야 한다( 다같이 직렬화해야되니까)
+                                         // foo 안에 bar 객체가 있다면 bar도 Seraiizable해야 한다는 뜻
   
-    String userName;
-    int id;
+              static final long serialVersionUID = 1L; // 클래스 버전 관리 // 클래스 수정할때 버전이 바뀌어서 버전을 관리한다 (UID = UniqueID)
+              // 객체를 저장할때와 불러올 때 같은지 체크하여
+              // serialVersionUID가 일치하지 않으면 실패(하도록 되어 있다)
   
-    transient String passWord;
+              String userName;
+              int userID;
+              transient String passWord;
+              // transient (제어자)의 경우 Serialize에 포함하지 않음 ( 저장/불러오기 대상에서 제외
   
-    @Override
-    public String toString() {
-      return userName + " " + id + " " + passWord;
-    }
-  }
+              public Foo() {}
   
-  class FooTest {
-    public static void main (String [] args) {
-      File dst = new File("C:/Temp/obj.data");
-      Foo foo = new Foo();
-      foo.userName = "김사탕";
-      foo.id = 142;
-      foo.passWord = "qwer1234";
+              public Foo(String userName, int userID, String passWord) {
+                  this.userName = userName;
+                  this.userID = userID;
+                  this.passWord = passWord;
+              }
   
-      try (ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(dst));
-          ObjectInputStream in = new ObjectInputStream(new FileInputStream(dst));) {
-        out.writeObject(foo);
-        Object read = in.readobject();
-        if (read != null && read instanceof Foo) {
-          Foo readFoo = (Foo)read;
-          System.out.println(readFoo);
-        }
-      } catch (IOException | ClassNotFoundException e) {
-        e.printStackTrace();
-      }
-    }
-  }
+              @Override
+              public String toString() {
+                  return userName + " " + userID + " " + passWord;
+              }
+          }
+  
+          Foo foo = new Foo("HanSol-The=Outsider",
+                   1423, "negazeilzalnaga");
+          System.out.println(foo); // HanSol-The=Outsider 1423 negazeilzalnaga
+  
+          File dst = new File("C:/Temp/MyTemp/obj.data"); //확장자는 상관이 없다
+  
+          try (ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream(dst));
+              ObjectInputStream in = new ObjectInputStream(new FileInputStream(dst))) {
+              out.writeObject(foo);
+              Object read = in.readObject();
+              if (read != null && read instanceof Foo) {
+                  Foo readFoo = (Foo)read;
+                  System.out.println(readFoo); // HanSol-The=Outsider 1423 null
+                                               //결과의 password가 null로 나온것은 transient로 만들었기 때문이다
+  
+              }
+          } catch (ClassNotFoundException e) { // 다른 예외 발생시킨다
+              e.printStackTrace();
+          }
+        
+  
   ```
 
 - 부모 클래스가 Serializable이 아닌 경우 자식 클래스에서 직접 처리
 
   - writeObject(), readObject()를 자식 클래스에서 직접 구현
-
-  ```
-  class ParentFoo {
-    int memVarOne;
-    double memVarTwo;
-  }
+  - 부모클래스의 변수들은 직접 write하고 본인의 클래스는 defaultWrite/ReadObject()하여 수동으로 Serialzie한다
   
-  class ChildFoo extends ParentFoo implements Serializable {
-    @Override
-    private void writeObject(ObjectOutputStream out) throws IOException {
-      out.writeInt(memVarOne);
-      out.writeDouble(memVarTwo);
-      out.defaultWriteObject();
-    }
-    @Override
-    private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
-      memVarOne = in.readInt();
-      memVarTwo = in.readDouble();
-      in.defaultReadObject();
-    }
-  }
+  ```java
+    // 부모클래스는 Serializable하지 않을 때,
+    // 자식클래스를 Serializable하게 구현하기
+  
+        class ParentFoo{
+            int memVarOne;
+            double memVarTwo;
+  
+        }
+  
+        class ChildFoo extends ParentFoo implements Serializable {
+            int childMember; // 얘는 childMember이기 때문에 알아서 직렬화된다
+  
+  
+            private void writeObject(ObjectOutputStream out) throws IOException {
+                out.writeInt(memVarOne); // 직접 부모객체의 멤버 변수를 직접 out에 써주기어야 한다
+               // out.writeDouble(memVarTwo); // 원하지 않는 변수가 있다면 trsient대신 그냥 생략해주어도 된다
+               out.defaultWriteObject(); //child foo에 있는애들을 직렬화해주는 애
+                /////////////////////////////////////////////////////////////////////////이부분 보충
+            }
+  
+            private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
+                   memVarOne = in.read(); // write를 한 순서 그대로 읽어야만 읽는게 가능하다
+                   memVarTwo = in.readDouble();
+                   in.defaultReadObject();
+  
+            }
+        }
+  /////////////////////////////////////////어떻게 사용하는지 잘모르겠다 Extenerlizabel과 관계가 있는건가?
   ```
