--- a/Java/Java_TIL/5_10_JCF.md
+++ b/Java/Java_TIL/5_10_JCF.md
@@ -368,11 +368,17 @@ System.out.println(set.pollFirst()); // null
 
 ### Map 인터페이스
 
-- Key와 Value의 쌍으로 구성된 자료의 집합을 다루는 인터페이스\
+- Key와 Value의 쌍으로 구성된 자료의 집합을 다루는 인터페이스
 
-  - Key, Value 쌍은 `Map.Entry<K, V>` 객체로 관리
+  - Key, Value 쌍은 내부적으로 `Map.Entry<K, V>` 객체로 관리 한다
+
+- Collection 인터페이스를 상속하지 않는다
 
 - Key는 중복될 수 없으며, Value는 중복이 가능
+
+  - Key가 identifier역할을 한다
+
+- Set과 유사하고 Map에 Key가 Set이라고 생각할 수도 있을 것 같다
 
 - `Map<K, V>`의 구현체
 
@@ -429,8 +435,18 @@ System.out.println(set.pollFirst()); // null
   | `storeToXML()`          | XML 형식으로 속성 파일을 저장한다.             |
 
 ```java
+// Map 종류
+Map<String, Integer> map = new HashMap<>(); // 가장 대표적으로 사용되는 Map // 구성원리는 hashSet과 거의 비슷하다
+// NavigableMap<String, Integer> map2 = new TreeMap<>();
+//Set 과 Map 은 구현이 거의 비슷하기 때문에 구조도 거의 비슷하다
+////////////////////////////////// 설명 다시한번 들어보기
+
+// Map 종류 번외
+Map<String, Integer> map3 = new Hashtable<>(); // Vector처럼 옛날 구현 syrncronize구현 // 사용하지 않는다
+Properties prop = new Properties(); // Hashtable<String, String>을 상속하는 클래스
+prop = System.getProperties(); // System의 property가 이 형식으로 제공된다는 것 참고하자
+
 // Map 메소드
-System.out.println();
 
 // put()은 기존에 동일 key가 있었으면 기존 value를 반환, 없었으면 null을 반환
 // 업데이트를 했으면 업데이트한 값을 알 수 있고, 없었으면 없었다고 알려준다 => 유용하다
