--- a/Java/Java_TIL/5_11_I-O.md
+++ b/Java/Java_TIL/5_11_I-O.md
@@ -581,7 +581,7 @@ public class Main {
   }
   ```
 
-### 객체 저장을 위한 스트림
+### 객체 저장을 위한 스트림 - 직렬화
 
 - 일반적인 참조형 객체를 저장하기 위한 스트림
 
@@ -600,7 +600,8 @@ public class Main {
               static final long serialVersionUID = 1L; // 클래스 버전 관리 // 클래스 수정할때 버전이 바뀌어서 버전을 관리한다 (UID = UniqueID)
               // 객체를 저장할때와 불러올 때 같은지 체크하여
               // serialVersionUID가 일치하지 않으면 실패(하도록 되어 있다)
-  
+  ////////////////////////////////////////////////////////////////////////////클래스는어디에저장되는거지
+          
               String userName;
               int userID;
               transient String passWord;
@@ -665,16 +666,17 @@ public class Main {
             private void writeObject(ObjectOutputStream out) throws IOException {
                 out.writeInt(memVarOne); // 직접 부모객체의 멤버 변수를 직접 out에 써주기어야 한다
                // out.writeDouble(memVarTwo); // 원하지 않는 변수가 있다면 trsient대신 그냥 생략해주어도 된다
-               out.defaultWriteObject(); //child foo에 있는애들을 직렬화해주는 애
+               out.defaultWriteObject(); //기본적인 WriteObject 기능 호출
                 /////////////////////////////////////////////////////////////////////////이부분 보충
             }
   
             private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
-                   memVarOne = in.read(); // write를 한 순서 그대로 읽어야만 읽는게 가능하다
+                   memVarOne = in.readInt(); // write를 한 순서 그대로 읽어야만 읽는게 가능하다
                    memVarTwo = in.readDouble();
                    in.defaultReadObject();
   
             }
         }
-  /////////////////////////////////////////어떻게 사용하는지 잘모르겠다 Extenerlizabel과 관계가 있는건가?
+  
+  // 이후 똑같이 Object wirte/read 하게 되면 재정의한 메소드가 실행된다
   ```
