--- a/Java/Java_TIL/5_11_I-O.md
+++ b/Java/Java_TIL/5_11_I-O.md
@@ -47,6 +47,8 @@
   | `void reset()`                            | mark()가 호출된 지점으로 돌아간다.                           |
   | `boolean markSupported()`                 | mark, reset 메소드의 지원 여부를 반환                        |
 
+  
+
   ```java
   //System.in 을 통한 표준 입력(키보드 입력) 
   //System.out 을 통한 표준 출력(모니터 출력)
@@ -70,6 +72,8 @@
   	
    // 버퍼 활용
    // 버퍼, 선언해 놓고 사용할 수 있게 해놓은 메모리 공간
+   // 버퍼를 사용하면 속도가 빨라진다 => 오버헤드를 줄여주는 역할
+  // 아래 버퍼드에도 비슷한 작용이 있다
   
   	  try (InputStream input = System.in;){ 
               int read = 0;
@@ -77,7 +81,7 @@
               while((read = input.read(bytes)) != 0) { 
                   System.out.println(Arrays.toString(bytes)); // [97, 98, 99, 100, 10, 0, 0, 0, 0, 0, 0, 0....
                   System.out.println(read); // 5 // 5개를 읽었다는 뜻 // 버퍼에 크기에 따라 달라지 질수 있다
-                  					    // 버퍼크기가 3이라면 3개씩 밖에 못읽어서 3개가 출력된다
+                  					ㅂ    // 버퍼크기가 3이라면 3개씩 밖에 못읽어서 3개가 출력된다
               } // => 버퍼로 받는 이유 조사하기
   
           } catch(IOException e) {
@@ -268,12 +272,11 @@
                                                  // 상위 폴더가 없다면 false 함
             System.out.println(fileOne.mkdirs()); // mkdirs 은 경로의 폴더도 생성 // 상위폴더 없어도 생성해서 마지막 폴더까지 생성 함
     
-            File fileTwo = new File(filePath, "file2.txt");
             fileTwo.createNewFile(); // 해당 폴더에 파일이 생성됨 // 파일 생성 방법 1
                                    // IOexception을 main()메소드에서 throw함
                                      
-  
-            File fileThree = new File(fileOne, "file3.txt");
+    
+          File fileThree = new File(fileOne, "file3.txt");
             fileThree.createNewFile(); // 위에는 filePath에서 받았고 아래는 fileOne객체를 넣었구나
     
             File fileFour = new File(new URI("file:///c:/Temp/MyTemp/file4.txt")); // 예도 예외처리해줘야함
@@ -283,10 +286,10 @@
           //file이 자체 파일이 아니라 path로도 사용이 가능하기 때문에 헷갈릴 수 있다는점 생각해두자
     
     ```
-
-  - File 클래스의 주요 메소드
-
-    - `getName()`, `getParent()`, `getParentFile()`, `getPath()`
+  
+- File 클래스의 주요 메소드
+  
+  - `getName()`, `getParent()`, `getParentFile()`, `getPath()`
     - `isAbsolute()`, `getAbsolutePath()`, `getCanonicalPath()`, `toURI()`
     - `canRead()`, `canWrite()`
     - `isDirectory()`, `isFile()`
@@ -413,7 +416,7 @@
 
 - 노드(데이터 소스/목적지)와 직접 연결되지 않고, 다른 스트림과 연결하여 부가적으로 사용되는 스트림
   - 스트림에 부가적인 기능 제공
-- Stream Chaining: 보조 스트림을 쇄적으로 생성 하여 여러개 연결하여 사용 하는 것
+- Stream Chaining: 보조 스트림을 연쇄적으로 생성 하여 여러개 연결하여 사용 하는 것
 
 ### 보조 스트림의 종류
 
@@ -432,28 +435,7 @@
 | `PrintWriter`          | 문자열 표현으로 출력               |
 | `PrintStream`          | 문자열 표현으로 출력               |
 
-```java
-// InputStreamReader ┬  byte 스트림 -> char 스트림으로 변환하는 보조 스트림 // 위에 InputStream 사용한 예 있다
-// OutputStreamWriter┘
 
-// 전송속도가 빠르기 때문에 반응성이 중요하지 않은 경우에 사용 한다 (파일입출력, 네트워크 일부 경우(다운로드, 업로드...)
-// BufferedReader       ┬ 스트림에 버퍼링 적용하여 스트림 throughput 향상
-// BufferedWriter       ┤ throughput: 평균 전송 속도(로 이해하면 될 것 같다)
-// BufferedInputStream  ┤ delay: 버퍼링을 쓸 경우 오히려 안좋아짐 -> delay 시간 길어짐(네트워크에서 ping으로 생각하는 것)
-// BufferedOutputStream ┘ 위 두 속성은 서로 trade-off 관계 // 평균 전송 속도 높이는게 이득인 상황이 생긴다 -> 그대 Buffer를 사용한다
-
-public class Main {
-    // 버퍼 사용할때 필요한 메서드
-    static void copyStream(InputStream input, OutputStream output) throws IOException {
-        byte[] buff = new byte[1024];
-        int read = 0;
-        while ((read = input.read(buff))>0) {
-            output.write(buff, 0, read);
-        }
-    }
-  
-
-```
 
 
 
@@ -474,6 +456,26 @@ public class Main {
 - 기본 버퍼 크기: 8192 bytes
 
   ```java
+  // InputStreamReader ┬  byte 스트림 -> char 스트림으로 변환하는 보조 스트림 // 위에 InputStream 사용한 예 있다
+  // OutputStreamWriter┘
+  
+  // 전송속도가 빠르기 때문에 반응성이 중요하지 않은 경우에 사용 한다 (파일입출력, 네트워크 일부 경우(다운로드, 업로드...)
+  // BufferedReader       ┬ 스트림에 버퍼링 적용하여 스트림 throughput 향상
+  // BufferedWriter       ┤ throughput: 평균 전송 속도(로 이해하면 될 것 같다)
+  // BufferedInputStream  ┤ delay: 버퍼링을 쓸 경우 오히려 안좋아짐 -> delay 시간 길어짐(네트워크에서 ping으로 생각하는 것)
+  // BufferedOutputStream ┘ 위 두 속성은 서로 trade-off 관계 // 평균 전송 속도 높이는게 이득인 상황이 생긴다 -> 그대 Buffer를 사용한다
+  
+  public class Main {
+      // 버퍼 사용할때 필요한 메서드
+      static void copyStream(InputStream input, OutputStream output) throws IOException {
+          byte[] buff = new byte[1024];
+          int read = 0;
+          while ((read = input.read(buff))>0) {
+              output.write(buff, 0, read);
+          }
+      }
+    
+  
   public class Main {
       // 버퍼 사용할때 필요한 메서드
       static void copyStream(InputStream input, OutputStream output) throws IOException {
@@ -505,7 +507,7 @@ public class Main {
           } catch (IOException e) {
               e.printStackTrace();
           }
-           // 반응성이 중요한 경우에만 Buffer 사용하고 그외에는 그냥 사용하는게 좋을 정도로 큰 차이라고 이해하면 좋겠다
+           // 반응성이 중요한 경우에만 Buffer 사용하지 않고 그외에는 그냥 사용하는게 좋을 정도로 큰 차이라고 이해하면 좋겠다
   ```
 
 - `BufferedReader는` `readLine()` 메소드를 사용할 수 있다.
