--- a/Daily/20201015-TIL.md
+++ b/Daily/20201015-TIL.md
@@ -24,7 +24,7 @@
     - Http에 대한 짧은 강의를 아침 시간을 활용하여 들었다
     - 강의내용 정리
       - HTTP 웹 클라언트와 웹서버의 통신 프로토콜로 웹을 구성하는 가장 기본적인 요소중에 하나이다
-      - 개발자도구 - Network - Header 를보면 웹서버와 웹 클라이언트간의 요청과 응답 메세지들을 확일 할 수 있따
+      - 개발자도구 - Network - Header 를보면 웹서버와 웹 클라이언트간의 요청과 응답 메세지들을 확인할 수 있다
       - 클라이언트에서 Request를 형식에 맞추어보내면 서버에서 Response하게 되고 그것을 바탕으로 웹브라우저는 출력을 하게 된다
         - Response에는 본문파일과 함께 본문에 대한 부가정보들을 담고 있다
         - Requset는 header와 body로 나뉘어지며 HEader에 형식에관한 내용들이 들어있고 Body에 전달하는 내용들이 담겨있다
@@ -43,19 +43,21 @@
       - 그부분을 람다식을 활용하라고 얘기해주는 것 같은데 한번 해봐야겠다
     - List에 add하는 것을 깔끔하게 foreach를 통해서 하는 것을 수정하였다
     - SampleMenu가 MenuType을 몰라도 되기 때문에 분리하였다
-      
+
       - 서로 정보를 몰라도 되는애는 철저하게 분리해주는 것에 신경을 많이쓰는것 같다
     - CheckMenuNum이 너무많은 기능하기 때문에 분리해야될 것 같다고
-      
-      - 메서드의 기능이 하나의
+
+      - 메서드의 기능이 하나의 기능만 하도록하는것이 중요한 것 같다
     - MenuFactory를 if~else로 구현한것을 향상된 switch case로 고쳤다 -> 3개이상은 switch case가 낫다는 조언을 해주었다
     - Git을 pull할때 폴더자체를 지우고 IntelliJ를 통해 repositary를 가지고오는 방식을 알려줘서 배웠다
-    - 한글을 사용하지 않고 코드도 영어로 사용하고 Git Issue등도 영어로 사용할 것을 권고받앗다
-    - 장편소설을 쓰듯이 코드를 읽기 좋은 형태로 만드는 것을 목표로 해라
-    - 느낀점
-      - 동료의 관점은 기능 구현은 기본이고 어떻게하면 더 좋은 코드를 짜는가를 중점적으로 얘기하는 것 같아서 많이 배울 수 있는 기회가 되고 있다
+    - 한글을 사용하지 않고 코드도 영어로 사용하고 Git Issue등도 영어로 사용할 것을 권고 받았다
+    - 장편소설을 쓰듯이 코드를 읽기 좋은 형태로 만드는 것을 목표로 해라라는 말에 코딩이 더어려워지겠지만 더 재밌어 질거같은 느낌을 받았다
+
+  - 느낀점
+
+    - 동료의 관점은 기능 구현은 기본이고 어떻게하면 더 좋은 코드를 짜는가를 중점적으로 얘기하는 것 같아서 많이 배울 수 있는 기회가 되고 있다
+
       
-        
 
   - CUI 구현하기 #3
 
@@ -78,7 +80,7 @@
 
           - 기존 구현들을 마치고 나니 클래스가 많아 subPackage까지 만들었던것들을 모두 지우고 2개의 클래스로 리팩토링할 수 있었다
           - 굉장히 뿌듯했다 -> 굿!
-        
+
       - MenyType 메서드구현
 
         - 각 타입별 이넘들이 메서드들을 가지고 있는게 아니어서 구상하는데 어려움을 겪었다
@@ -110,6 +112,7 @@
           - 그 후 직접 구현을 통해 어떻게 검증해야하는지 알려주었다
             - 다시한번 코드를 검토하면서 어떻게 구현했는지 살펴봐야겠다
         - 수입입력 부분에 대한 구현은 잘되었다고 해주었고 너무 긴코드를 methodExtraction해서 2개의 메서도르 나누어주었다
+          - 메서드를 쉽게 Extract할 수 있는 기능을 배울 수 이썽ㅆ다
         - 클래스를 많이 줄인 부분은 함께 만족한 부분이었다
 
     - 다시 구현해보기
@@ -131,11 +134,13 @@
 
 # 공부하면서 느낀점
 
-- 계단식 성장 ,여유가지기, 철학 
+- 동료와 잠깐 쉬면서 얘기를 하는데 개발 실력이 계단식으로 느니까 여유를 가지고 공부해보라고 조언을 해주었다. 그리고 구현보다는 철학을 가지고 개발을 해나가는것이 중요하다는 얘기도 해주었는데 이번 프로젝트하면서 간접적으로 많이 경험을 해보는 것 같다 
+
 - 프로젝트 구현을 하면서 동료에게 조언받은 대로 막힐때마다 최대한 그려보면서 했더니 어려운 문제들이 조금씩 정리되고 정리되는 것을 느꼇다
+
   - 머리로만 구현하지 말고 다른 수단을 이용해서 구체화해나가는 방법들을 좀더 찾아보면 좋을 것 같다
     - 아이패드 좋아보이던데..
-  
+
   
 
 # 내일 공부할 내용
@@ -144,47 +149,4 @@
 - 프로젝트 트러블슈팅
 - 질문사항 조사 및 정리
 - TiL 정리 및 블로그 업데이트
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
