--- a/Daily/20201019-TIL.md
+++ b/Daily/20201019-TIL.md
@@ -39,7 +39,7 @@
 - 저녁 공부시간
   - 데이터 베이스 복습
     - aws인스턴스를 종료하고 처음부터 다시  인스턴스에 접속하고 mysql 서버를 시작하면서 복습을 하고싶었다
-      - 서버를 중지하고 다시 시작하여 ssh를 통해 서버에 접속하여 mySQl까지 실행해보고 싶었는데 
+      - 서버를 중지하고 다시 시작하여 ssh를 통해 서버에 접속하여 mySQl까지 실행해보고 싶었는데 계속 key가 invalid foramt이라고 떠서 진행을 하지 못했다..
     - day1 강의안에 정리도 다 마무리하지 못해서 내일 정리하면서 다시한번 봐야겠다
   - 깃 튜토리얼
     - 깃 사용방법 검색 중 동료가 git-it 이라는 git tutorial 프로그램을 알려주어 쭉따라해보았다
