--- a/Daily/20201020-TIL.md
+++ b/Daily/20201020-TIL.md
@@ -17,19 +17,21 @@
     - 유튜브 강의 탐색 중 유명하다는 백기선씨의 스프링 강의가 있어서 이강의 후에 들어보면 좋을 것 같다
   
 - 아침시간 준비시간
+
   - 프로젝트진행
     - db를 고치고 싶지만 어제 프로젝트를 진행하지 못햇기 때문에 프로젝트를 더 진행해야한다
     - 진행내용
       - excuteMenu의 결과를 어떻게 다음 동작과 연결시키는지 구현하기
         - 결과를 어떻게 밖으로 내보내야될지 알수가 없어서 동료에게 도움을 요청하였다
         - 이번에는 시간이 걸렸지만 끝까지 이야기를 해서 어떻게 해결할지 방향성을 잡고 이야기를 마칠수 있었다 -> 굿!
-  
+
 - 오후수업
 
-  - 어제 에러난 부분은 그냥 선택지에서 y를 눌루면되는것이었다.. 처믐에 잘못입력했을때도 그게 떠서 뭔가 잘못됬구나 싶어서 yes를 안누른게 허똑똑이짓이었다..
+  - 어제 에러난 부분은 그냥 선택지에서 y를 입력하면되는것이었다.. 처믐에 잘못입력했을때도 그게 떠서 뭔가 잘못됬구나 싶어서 yes를 안누른게 허똑똑이짓이었다..
     - key페어를 바꾸어서 기존 인스턴스는 사용하기 어려워져서 수업시작전 부터 첫번째 수업까지 어제것까지 복구하면서 듣느라 진땀을 뺐다..
       - 그래도 해당 부분은 잊어버리지는 않을 것 같다..
   - 따로 시간내서 정리하는 것보다는 쉬는시간에 정리해두면 더도움이 될 것 같다
+    - 그런데 쉬는시간에 쉬질 않으면 다음시간에 집중이 어렵기때문에 쉬는시간엔 최대한 쉬는걸로 해야겠다
   - 쿼리문을 쭉 치면서 예제를 하는데 왜이렇게 잘 안되는지,  Itellij가 선녀였다..
     - 도움받을 수있는 도구를 찾던지 더 신중하게 작성을 해야할 것같다
 
@@ -45,19 +47,23 @@
 
       - 수업은 MySQLWrokbrench로 나가니까 일단 이걸활용하고 그외에 사용할 일이 있으면 다른 편집기 사용해보는걸 도전해보자
 
-    - 수업 안 보면서 수업내용 정리한 것들 한번더 정리하고 실습 코드를 넣고 마무리 하였다
+    - 수업내용 정리한 것들 보면서 한번더 정리하고 실습 코드를 넣고 마무리 하였다
+
+      - 내용 보충과 전체 실습은 주말에 한번 해보는게 좋을 것같다
+      - 퀴즈도 내주신다고 하셨는데 중간중간 한문제씩이라도 풀면좋을 것같다
 
       
 
   - 프로젝트 진행
-  
+
     - 아침에 하던 현재 날짜인지 확인하고 맞으면 Date에 바로 입력하고 아니면 수동으로 입력받는 메서드를 작성했다
       - ExtractMethod를 통해 메소드를 따로 분리하였다
       - 파라미터로 받은 list에 add를 했는데 어떻게 본메서드안에 list에 추가되는지 잘모르겠는데 된다..
     - transcationOperate 메서드를 통해 inputStatementMenu메소드의 결과 List를 Model 메소드로 만드는 작업을 했다
       - 일단 model 객체를 만들어서 AppStatus에 넣는 작업까지
     - 테스트할 걱정
-      - 지금까지는 그냥 구현만 하면 됬는데 테스트를 해야된다니까 되게 부담이 된다.. 이래서 구현을 가볍게 가볍게 하는건가 싶기도하고 구현이 복잡해지면 복잡해질 수록 
+      - 지금까지는 그냥 구현만 하면 됬는데 테스트를 해야된다니까 되게 부담이 된다.. 이래서 구현을 가볍게 가볍게 하는건가 싶기도하고 구현이 복잡해지면 복잡해질 수록 부담이 커진다
+      - 처음해보는 거니 완벽하게 하려는 것보다 시도해보는것에 의의를 두고 도전해보는게 좋을 것같다
     - 할일 정리해놓으거보고 내일하기
 
 # 공부하면서 느낀점
