--- a/Daily/20201022-TIL.md
+++ b/Daily/20201022-TIL.md
@@ -34,9 +34,9 @@
   - 오후 ~저녁시간
     - 프로젝트진행
       - 프로젝트 마지막 날이기도하고 못다한 구현을 다하느라 정신없어서 글을 남기면서 작업은 하지 못햇다
-      - 피로도도 쌓이고 이제 마무리해나가야되니 마음도 급해지고 해서 어떻게 마무리를 해나갈까 걱정이 되기도했는데 옆에서 끝까지 집중하는 동료보면서 대단하다고 느꼇다
-      - 다 마무리하지는 못하고 마지막 서비스 구현을 통해 다 구현하지 못한 기능들만 채워 넣으면되는데 내가 조금더 신경써서 구현해놧으면 시간을 아낄 수 있었던 것 같은데 하고 마음이 많이 아쉬웠다
-      - 내일 아침 못다 구현한 기능들을 구현하면서 
+        - 피로도도 쌓이고 이제 마무리해나가야되니 마음도 급해지고 해서 어떻게 마무리를 해나갈까 걱정이 되기도했는데 옆에서 끝까지 집중하는 동료보면서 대단하다고 느꼇다
+        - 다 마무리하지는 못하고 마지막 서비스 구현을 통해 다 구현하지 못한 기능들만 채워 넣으면되는데 내가 조금더 신경써서 구현해놧으면 시간을 아낄 수 있었던 것 같은데 하고 마음이 많이 아쉬웠다
+        - 내일 아침 못다 구현한 기능들을 구현하면서 테스트를 구현할 수 있는 만큼 구현해 보아야 겠다
 
 # 공부하면서 느낀점
 
@@ -51,44 +51,6 @@
 - 프로젝트 정리
 - DB퀴즈
 - TiL 정리 및 블로그 업데이트
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
