--- a/Daily/20201026-TIL.md
+++ b/Daily/20201026-TIL.md
@@ -15,8 +15,8 @@
     - 스프링 입문강의를 이제 따라하면서 배우고 있어서 진도가  2개로 나뉘어서 계속 들어야되나 다른 걸 들어야 되나 고민했는데 실제로 따라할 때 미리 들어두었던게 도움이 되는 것 같아서 선행학습을 계속 진행하기로 하고 들었다
       - 예상했던 대로 듣기만 해도 도움이 되는게 느껴져 좋은 선택을 했다고 생각이 든다
     - 스프링 DB 접근 기술의 마지막 파트인 스프링 데이터 JPA를 들었는데 이부분은 더 향상된 부분으로 JPA 가 줄여준 코드 자체도 스프링에서 줄여주어 인터페이스 만으로 사용할 수 있게 해주는 엄청난 기술 이었다
-      - 다만 강사님이 강조하신 것 처럼 JPA를 충분히 알고 활용할 수 있어야 이런 향상된 기술을 사용하더라도 생기는 문제는 오류들에 대처할 수 있기 때문에 꼭 JPA를 알고 사용하는게 좋다는걸 배웠다
-      - 보면 정말 배울게 많은데 강사님도 그걸 언급하시면서 그러니까 서버개발자가 좋은 대우를 받는거다라고 말씀하셨고 이해가 가기시작했다
+      - 다만 강사님이 강조하신 것 처럼 JPA를 충분히 알고 활용할 수 있어야 이런 향상된 기술을 사용하더라도 생기는 문제는 오류들에 대처할 수 있기 a때문에 꼭 JPA를 알고 사용하는게 좋다는걸 배웠다
+      - 백엔드 개발자가 되기 위해 정말 배울게 많은데 강사님도 그걸 언급하시면서 그러니까 서버개발자가 좋은 대우를 받는거다라고 말씀하셨고 이해가 가기 시작했다
     - AOP라는 프레임워크를 배웠는데 이는 패키지내에서 모든 메소드 실행전에 어떤 기능을 실행시켜주는 기능을하는 것처럼 받아들여졌는데 내가 너무 간단히 이해하는것 같기는하다
       - 그래도 AOP의 개발 의도를 생각해보면 개발자들은 정말 반복을 싫어하고 반복을 줄이기 위해 많은 것들을 도구들로 개발해놓았다는 이고잉님의 말씀이 떠올라서 받아들이는데 도움이 되었다
       - 내용은 방대하지만 실무에서 사용하는건 5%밖에 안된다니까 필요한 기능에 집중해서 도입하면 더 접근하기 쉽지 않을까 생각이 든다
@@ -33,15 +33,14 @@
         - 후발주자로서 어떻게 이런 지식들을 효과적으로 습들할 것인가가 나에게 중요한 과제인 것 같다
     -  녹음 해놓은 것이 복습할 때 생각보다 도움이 많이 되어서 계속 수업때 녹음을 지속해야될 것같다
       - 제일 좋은건 수업들은 후 녹음을 한번 더 들으면서 복습하는 것 같은데 너무 시간이 오래걸려서 그건 어렵게 느껴지지만 방법을 한번 찾아보자
-      - 녹음에 제일 큰 단점은 어디에 어떤내용이 있는지 몰라서 필요한 부분을 찾는데 오래걸리는 문제인 것 같다
-        - 이부분을 어떻게 해결할지 고민해봐야 겠다
+      - 조금 불편한 점은 어디에 어떤 내용이 있는지 몰라서 들어가면서 일일히 찾아야 된다는 점인데 이 부분을 어떻게 해결할지 고민해봐야 겠다
+        - 이런 일상의 불편한 부분을 어떻게 소프트웨어적으로 풀어갈 수 있을까 고민하는게 나의 역할인 것 같다. -진지하게 한번 고민해 보자> 굿
   - 스프링입문강의
     - 시간이 빠듯해서 한강의 듣고 마무리하였다
 - 오후 공부시간
   - DB 수업
     - 강사님께서 수업시간 중 모르는 용어가 나오면 따로 자세히 설명해주시고 원리에 대해서 많이 말씀해주셔서 많이 도움이 된다
     - 쿼리문 자체는 어렵지 않지만 오타가 많이 나고 대소문자 구분이 안되서 많이 불편하다.. 자바가 확실한게 있어서 더 마음에 든다( 그냥하던거라 그럴수도 있다)
-    - 강의 중간
 - 저녁 공부시간
   - DB 복습
     - 쿼리문 실습 위주로 수업이 진행됬기 때문에  쿼리문을 따로 복사해놓고 하나하나 다시 치면서 연습을 해보았다
@@ -51,13 +50,14 @@
       - db, table 등을 생성하고 지우는 것에 익숙해지면서 조금씩 db다루는게 편해지고 있다
         - 데이터를 잘못입력해서 primary key가 올라가면 지웠다 다시만들면된다 
       - 쿼리문 사용에 최대 관문은 대소문자를 바꿔가면서 치는것과 오타 찾아내기 이다
+        - 분명히 좋은 도구 있을 것이고 스프링에도 자바 코드로 이런부분을 해결할수 있는 방법다고 강의중에 들은것 같다
     - 쿼리문 실습 못한 부분과 노트 정리는 내일 오전시간 활용해서 해야될 것같다
       - 생각보다 시간이 오래걸려서 맘이 급해지지만 그래도 확실히 다지고 나간다는 마음으로 충분히 정리하는 시간 갖도록 하자
 
 # 공부하면서 느낀점
 
 - 같이 프로젝트한 동료가 주말동안 프로젝트 피드백 받은 부분에 대한 인강을 듣고 왔다고 해서 이렇게 잘하는데도 열심히 하는 구나 싶어서 엄청 공부 자극이 됬다
-  - 내가 더 열심히 하다보면 누군가는 또 나를 보고 자극을 받을수 있지 않을까 싶고 또 그러다보면 개강 이후 조금 흐트러진 반 분위기도 더 좋아지지 않을까 희망을 가져본다
+  - 나도 내가 더 열심히 하다보면 누군가는 또 나를 보고 자극을 받을수 있지 않을까 싶고 또 그러다보면 개강 이후 조금 흐트러진 반 분위기도 더 좋아지지 않을까 희망을 가져본다
   - 그래도 오늘은 평소보다 많은 사람들이 같이 남아서 공부해서 더 잘 집중할 수 있었다
 
 # 내일 공부할 내용
