--- a/Daily/20201027-TIL.md
+++ b/Daily/20201027-TIL.md
@@ -6,8 +6,6 @@
 - 모의 면접 준비
 - TiL 정리 및 블로그 업데이트
 
-
-
 # 오늘 공부한 것 & 배운 내용
 
 - 출근시간 공부
@@ -19,21 +17,19 @@
     - 맛보기로 되어있는 앞에 몇강을 들으면서 강의가 어떻게 구성되어 있는지 살펴보았다
     - 앞에 스프링의 탄생배경과 역사들에 대해서 나오는데 확실히 입문강의라 조금씩 내용이 깊어지는것을 느낄 수 있었으며, 우리 수업에서도 이런 느낌으로 진행될 것이라는 게 느껴졌다
     - 다음주에 바로 스프링이 들어가면 들을 시간이 없어서 지금 강의를 구매하는건 좋지 않은 선택인것 같지만 강의가 끝난후 혹은 취업이후에라도 스프링과 JPA강의는 한번 꼭 완강을 해서 깊이있게 스프링과 JPA를 다룰 수있는 백엔드 개발자가 되고싶다
-  
 - 준비시간
   
   - 아침루틴
-  
 - 아침 공부시간
   - DB복습
 
     - 어제 부지런하게 작성하여서 오늘은 실습한부분은 잠깐 하고 마무리할 수 있었다
     - 따로 노트한 부분 정리
       - 따로 설명해주신 부분들 노트해놓은 것을 정리하며 필요한 부분은 녹음한것과 자료조사를 통해 보충하였다
-      - 오늘도 녹음한것들으면서 찾는데 오래걸려서 효율성이 많이 떨어졌다
-        - 그래도 수업내용을 놓친부분들이 많아서 정리하는데 도움이 많이 된다
-          - 생각보다 더 수업내용을 왜곡해서 듣고나 생략하고 듣는게 많다는 걸 발견했다. 이런 문제를 어떻게 줄여나갈까 고민해봐야될 것같다
-        - 수업하면서 따로 정리한 부분이나 건너뛴 부분들은 노트 중간중간에 따로 인덱싱을해주어서 듣는시간을 효율적으로 단축시킬 필요가 있다
+      - 오늘도 녹음한것 들으면서 잘못들은 부분을 찾는데 오래걸려서 효율성이 많이 떨어졌다
+        - 그래도 찾아서 듣기만 하면 수업내용을 놓친부분들이 많아서 정리하는데 도움이 많이 된다
+          - 수업 내용을 다시 듣다 보니 생각보다 더 수업내용을 왜곡해서 듣고나 생략하고 듣는게 많다는 걸 발견했다. 이런 문제를 어떻게 줄여나갈까 고민해봐야될 것 같다
+        - 수업하면서 따로 정리한 부분이나 건너뛴 부분들은 노트 중간중간에 메모를 해두어 인덱싱을 해서 듣는시간을 효율적으로 단축시킬 필요가 있다
           - 쉬는시간, 노트에 필기한부분, 이런식으로 간단히 메모를 남겨두어보자 
         - join에 대한 설명인데 foreinkey에서 한참 찾고있었다..오우... 
 
@@ -44,17 +40,14 @@
 - 오후 공부시간
   - DB 수업
     - 지난 시간에 배운 쿼리문을 활용해서 join과 subquery를 통해서 조합해서 사용하는 문제들을 풀었는데 거의 풀지 못해서 자신감이 조금 하락했다
-      - 기존의 예제들을 다시풀면서 각각 활용법을 다지면서 다시 suqqury에 도전해보아야 될 것 같다
-    - 그래도  SQl 기본 문법을 끝냈으니 차분히 소화시켜봐야될 것 같다
-  
+      - 기존의 예제들을 다시풀면서 각각 활용법을 다지면서 다시 subqqury에 도전해보아야 될 것 같다
+      - 그래도  SQl 기본 문법은 끝났고 또 심각하게 어려운편은 아니라서 천천히 다시 연습하면 익숙해질 수 있을 것 같다
+    - 오전에도 발견했지만 수업들으면서 집중이 안되거나 강사님이 말씀은 하시는데 머리속에서 처리를 못하는 부분들을 발견했다. 이게 집중력이 떨어져서 그런지 피곤해서 그런지 잘모르겠는데 다른 강의에서도 그런지 관찰해보아야 될 것 같다
 - 저녁 공부시간
-
   - DB 복습
     - 오늘 공부한 SQL문법을 다시 한번 보고 따라 치면서 복습을 진행하였다
       - 효율 적인 진행을 위해서 VSCODE로 연습할 공간을 만들어서 실습했는데 더 편리한 부분도 있고 불편한 부분도 있지만 그래도 만족스러웠다
       - 아직 복습할 부분이 산더미처럼 남아있는데 시간이 부족하여서 주말에 이어서 복습해야될 것 같다
-
-  
 
 # 공부하면서 느낀점
 
