--- a/Daily/20201030-TIL.md
+++ b/Daily/20201030-TIL.md
@@ -23,7 +23,7 @@
   - 개발자 취업 영상
 
     - 내용정리
-      - 하나의 기술스택
+      - 하나의 기술스택에 포트포리오가 필요하다
       - 취업을 위해 필요한것은 해당 기술 관련 포트폴리오, 코딩테스트, 기술 면접, 인성 면접이다
         - 이런 명확한 목표들이 있어야 어떻게 준비하고 얼마나 준비해야 되는지 정할 수 있는 것 같다
         - 지금은 기술을 배워서 포트폴리오를 진행할 준비를 하지만 한쪽으로만 치우치지 않고 병렬적으로 준비해 나갈 수 있는 부분들을 찾아가면 더 효과적이고 목표지향적으로 준비할 수 있을 것 같다
@@ -45,34 +45,33 @@
 - 아침 공부시간
   - HTML & CSS day3 수업
 
-    - 수업 요약: 어제에 이어 main에 group1 로그인 파트를 스타일링 해나가면서 차근차근 요소들도 작성해 그룹1 부분을 마무리하였다.
+    - 수업 요약
+
+        -  어제에 이어 main에 group1 로그인 파트를 스타일링 해나가면서 차근차근 요소들도 작성해 그룹1 부분을 마무리하였다.
 
     - 수업 정리
 
       - 로그인파트
 
         - 어제 마크업한 부분에 아래쪽에 회원가입과 아이디/비밀 번호 찾기 칸을 추가하기 위해 폼이 끝난 영역에 ul 클래스를 추가해서 마크업하였다
-              - 연속된 기능들은 대부분 ul로 작성하시고 나중에 css로 레이아웃 처리하시는게 하나의 패턴으로 보였다
-          
+          - 연속된 기능들은 대부분 ul로 작성하시고 나중에 css로 레이아웃 처리하시는게 하나의 패턴으로 보였다
         - 마크업으로 표현된 설계를 바탕으로 디자인 하기
 
           - 둥근모소리, 백그라운드 색, 로그인 위치 어떻게 설정할것인지, 폼의 서식을 어떻게 줄것인지등 필요한 부분들을 그림으로 그리시면서 디자인 설계를 하셨다
-
         - 스타일링 시작
 
-             - fieldset에 segend는 눈에 보이지 않게하는게 일반적임으로 숨기기 위해서 position:absoulte width height :1px 을 주어 1px짜리 점으로 만들고  clpi-path polygon을 그점마저 보이지 않게 해었다
-                  - 이후 legen에 .a11y-hidden 태그를 추가해주어 해당 나중에 숨기고 싶은 클래스들에 적용할 수 있게 확장을 하였다
-                        - 이렇게 비슷한 것들을 클래스로 묶어서 관리하는 것이 효율적으로 마크업과 스타일링을 하는 방법인 것 같다
-                        - 참고사이트 : https://bennettfeely.com/clippy/
-
+          - fieldset에 segend는 눈에 보이지 않게하는게 일반적임으로 숨기기 위해서 position:absoulte width height :1px 을 주어 1px짜리 점으로 만들고  clpi-path polygon을 그점마저 보이지 않게 해었다
+               - 참고사이트 : https://bennettfeely.com/clippy/	
+               - 이후 legend에 .a11y-hidden 태그를 추가해주어 해당 나중에 숨기고 싶은 클래스들에 적용할 수 있게 확장을 하였다
+                    - 이렇게 비슷한 것들을 클래스로 묶어서 관리하는 것이 효율적으로 마크업과 스타일링을 하는 방법인 것 같다
           - login-heading에 text-indent를 통해 들여쓰기를 주어 레이아웃을 준것 같은 효과를 주었다
               - 일반적으로 form은 div로 묶어서 일괄적으로 스타일링을 하는게 용이해서 그렇게 하는경우가 많지만 우리는 각자 form에 스타일링을 하기로하고 login-form과 sign을 각각 스타일링을 일관 되게 주어서 하나로 묶인 것처럼 스타일링 하였다
           -  input에 위치를 정렬하기 위해 inline인 label을 inline-blcok으로 바꾸어주고 width를 주었고 input을 여러속성들을 사용해 정렬한 이후 label과 input의 높이를 정렬하기 위해 2개를 묶어 vertical-alighn:middel을 주었더니 크기가 더큰 input에 맞추어 label이 정렬되었다
-              - css에서 다른부분들 보다는 요소들을 배치하는 것이 어려운 것 같은데 강사님이 뭐든지 척척 맞추어 나가는 것보면 신기하기만 하다
+              - css에서 요소들을 배치하는 것이 어려운 것 같은데 강사님이 뭐든지 척척 맞추어 나가는 것보면 신기하기만 하다
           - 로그인 버튼의 배치를 위해 Position을 활용하기 위해 fieldset을 relative로 만든뒤 top right를 0을 주니 원하는 위치에 배치가 되었고 이후 속성들을 이용해 스타일링하였다
           - 디자인상 sign 위쪽에 있는 줄을 표시하기 위해 login-filedset아래에 border를 만들어주고 패딩을 주어 적당한 위치에 배치하였다
             - 줄을 긋는데 어느 요소를 활용할 것인가 패딩을 어디서 줄것인가 같은 문제가 경험이 필요한 부분인 것 같아서 보통 어떻게 표현하는지 알고있으면 좋을 것 같다
-          - filedset이 어떤 요소인지 다시 찾아보니 form태그아래 filedset으로 감싸고 그 아래 legend가 있고 그다음에 label&input을 감싼 div전들이 들어가는 구조로 이루어진것을 알수있었다 
+          - filedset이 어떤 요소인지 다시 찾아보니 form태그아래 filedset으로 감싸고 그 아래 legend가 있고 그 다음에 label&input을 감싼 div들이 들어가는 구조로 이루어진것을 알수있었다 
             - 잘짜여진 html구조를 보니 어디에 뭐가있는지 명확해지고 시멘틱 태그와 적절한 naming이 그역할들을 알려주니 코드를 통해 구조를 확인하기가 정말 편하다는 것을 느꼇다
             - 스프링에서 활용할 form태그와 관련된 것이니 기억해두는게 좋을 것 같다
           - sign 앞에 아이콘을 입력하기 위해 fontello에서 웹폰트를 받았고 css import는 지난번에 해서 마크업만 수정하였더니 해당위치에 아이콘이 들어갔다
@@ -86,7 +85,7 @@
     - Valdation파트
       
       - 구조설계
-        - 새로운 section을 만들고 h2를 이용해 header를 만들지만 보이지 않아도 되기에 숨긴 헤더로 만드리고 설계하였고 이번에도 ul을 통하여 2개의 validation 창을 표현하기로 설계하였다
+        - 새로운 section을 만들고 h2를 이용해 header를 만들지만 보이지 않아도 되기에 숨긴 헤더로 만들자고 설계하였고 이번에도 ul을 통하여 2개의 validation 창을 표현하기로 설계하였다
           - validation에는 링크를 갖게 하고 새로운창에서 열것이니 target을 주고 title도 줘서 링크를 설명할 수 있도록 하기로 하였다
             - target에는 blank가 아닌 _black를 주어야 진정한의미에 새창을 띄우는 것이라는것 배운게 인상적이었다
             - 뭘하나 해도 제대로 알고 사용하는 사람은 다른 것 같다. 강사님이 어디서 간단히 보고 사용하더라도 코드 사용하더라도 어떤코드인지는 명확히 알고나서 사용하라고 하신 의미를 알 것 같다
@@ -102,6 +101,7 @@
           - 아이콘을 넣는것도 배경을 넣는것과 마찬가지 효과이기 때문에 먼저 gradient를 주면 아이콘이 안나오는 현상이 발생하니 먼저 아이콘을 배경으로 입혀주어야 한다고 말씀하셨다
         - 글자에만 링크가 걸리는 효과를 전체 box로 확장하기 위해 .validation-list li를 .validation-list a로 바꾸어 주었더니 box가 겹쳐서 display를 bolck으로 바꾸어 주었더니 제자리를 다시 찾아가고 전체 박스에 링크가 걸리도록 하였다
           - 이런 사소해 보이는 불편함들을 해소하는 것들이 프론트 개발자의 중요한 포인트인 것 같다
+      
     - Term파트
 
       - 논리 적인 순서
@@ -131,46 +131,25 @@
     - 용어정리
 
       - 썸네일(Thumbnail): 사진 또는 그림을 엄지손톱 만하게 작게 표현한 것이 어원으로 페이지 전체의 레이아웃을 검토할 수 있게 페이지 전체를 작게 줄여 화면에 띄운 것을 뜻한다
-    
+
     - 느낀점
-    
+
       - 수정 중간중간  프론트 개발자와 디자이너와의 소통이 어떻게 이루어지고 디자니너가 만든 시안을 어떻게 웹페이지화 해나가는지 얘기해주시는 부분들에서 되게 재미를 느끼며 디자인대로 웹페이지를 만들어내는게 얼마나 힘든일인가.. 라는 생각을 해봤다
       
     - 수업이 반복되서 그런지 아니면 어제 TIL정리를 해서 그런지는 모르겠지만 어제보다 훨씬 수업을 따라가기 수월했고 수업 노트도 모든것을 다적는다기보다는 수업 flow를 적어 나가기로 마음먹고 했더니 훨씬 많은 내용들 적어서 복습하는데 도움이 많이 되었다 -> 굿!
-        
+      
         - 수업내용이 논리적순서 - 구조설계 - 마크업 - 디자인 설계 - 스타일링의 구조를 반복하기 때문에 몇번째 수업을 듣다 보니 그 구조에 점점 익숙해 져나가서 듣기가 점점 편해지는 것도 있는것 같다
         
       - 복습하면서 css중 속성에 효과가 궁금하면 수치만 조금바꿔서 적용하고 웹페이지 가보면 바로 확일 할 수 있기 때문에 너무 편리하게 느껴졌다
         
         - 이런 직관성이 프론트엔드를 공부하는 매력중에 하나지 않을까 싶다
         
-      - 강사님이 프론트 수업진행하실 때는 스스로 문제 해결구조 갖추어서 실습해보고 그뒤에 같이 해보는 방식을 하여 스스로많이 해보는 방식으로 진행하신다는데 이렇게 해야 진짜 문제해결 능력느는 거 같다
+      - 강사님이 프론트 수업진행하실 때는 스스로 문제 해결구조 갖추어서 실습해보고 그뒤에 같이 해보는 방식을 하여 스스로많이 해보는 방식으로 진행하신다는데 이렇게 해야 진짜 문제해결 능력이 거 같다
       
         - 나도 어떻게 하면 이런방식으로 혼자 공부할 수 있는지 생각해 봐야될 것 같다
       
           
-  
-- 오후 공부시간
-  - Java 보강 day2 수업
 
-    - 수업정리
-
-      - 
-        
-        
-        
-      
-    - 용어정리
-    
-      - 
-  
-    
-  
-- 느낀점
-      
-  - 
-    
-  
 - 저녁 공부시간
 
   - TIL 정리
