--- a/11_2020/20201105-TIL.md
+++ b/11_2020/20201105-TIL.md
@@ -42,8 +42,25 @@
 
 - 자율학습 시간
 
-  - Java복습
-    - 
+  - Java 복습
+    - 스레드풀
+      - 어제 정리 못한 shutdown() 메서드 내용추가했다
+      - 사용 예로 많이 나온 배치프로세스에 대한 
+      - 멀티스레드 정리한 내용
+        - https://github.com/FoeverNa/JBS-Java/blob/master/class_note/5_14_MultiThreadProgramming.md
+    - 정규표현식
+      - 정규표현식과 표현방식에 대해 정리하고 표현식 연습문제를 풀었다
+        - 연습문제 풀때 스스로풀고 solution을 보고 다시 연습하니 배우는게 많았다
+        - 풀다가 생각대로 안될 때는 안맞을 때는 그림으로 확인해보는게 도움이 많이 되었다
+      - 수업 예제들을 복습해보고 Pattern클래스와 Matcher클래스를 정리하였다
+      - 정리한 내용
+        - https://github.com/FoeverNa/JBS-Java/blob/master/class_note/5_7_RegularExpression.md
+    - UnitTest
+      - UnitTest 개념 정리 및 예제 실습
+        - 람다식과 Stream API의 기본적인 것들을 활용한 예제인데 낯설게 느껴져서 한번 따라하고 안보고 다시하는데 이해안된 부분에서 구현이 막힌다
+          - 예제도 그냥 하지 말고 이런식으로 안보고 반복해서 해봐야 공부효과가 올라가는 것 같다
+      - Junit활용한 unit test 예제 복습하면서 정리하는 시간 가졌다
+        - AAA패턴, 어노테이션, asserThat메서드, Exception test방법을 정리하였다
 
 
 
@@ -53,13 +70,17 @@
 
   - 그대신 방식은 강의안을 보충하는 것이 아닌 지금처럼 직접 작성해서 하는 방식으로 하는것을 유지해봐야겠다
 
-- 
+- 점심먹고 공부하려는데 너무 피곤해서 눈감고 쉬면서 아침에 이야기한 내가가진 한정된 자원에 대해서 생각해보게 됬다. 한정된 체력, 집중력, 시간을 활용해서 어떻게든 목표에 맞는 결과를 내야하기 때문에 신중하게 고민하고 공부해야 될 것 같다
+
+  - 어떻게 하면 공부를 위한 공부가 되지 않게 할 수 있을까?
 
   
 
 # 내일 공부할 내용
 
-- 
+- Java복습 마무리(진짜 마무리하자)
+- DB복습 시작
+- TiL 정리 및 블로그 업데이트
 
 
 
